# svg2img-rb

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  flake.nix  package.sh  release.sh  svg2img.gemspec
.github/workflows/: main.yml
ext/svg2img/: Cargo.toml  extconf.rb
ext/svg2img/src/: lib.rs
lib/: svg2img.rb
lib/svg2img/: version.rb
sig/: svg2img.rbs
spec/: generate_image_spec.rb  spec_helper.rb
