[package]
name = "svg2img"
version = "0.1.0"
edition = "2021"
authors = ["Orvar Segerström <orvarsegerstrom@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
image = "0.25.2"
magnus = { version = "0.6.2" }
resvg = "0.43.0"
uuid = { version = "1.10.0", features = ["v4"] }
