[package]
authors = ["Orvar Segerström <orvarsegerstrom@gmail.com>"]
edition = "2021"
license = "MIT"
name = "svg2img"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
image = "0.25.2"
magnus = { version = "0.6.2" }
resvg = "0.43.0"
uuid = { version = "1.10.0", features = ["v4"] }
